--- a/app/src/main/res/layout/about_us.xml
+++ b/app/src/main/res/layout/about_us.xml
@@ -19,19 +19,18 @@
         android:layout_height="match_parent"
 
      />
-
     </android.support.v7.widget.CardView>>
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/adviewabout"
-        android:orientation="vertical"
-        android:background="@color/white"
-        android:layout_marginTop="@dimen/margin_10"
-        android:layout_gravity="center_horizontal"
-        android:layout_centerHorizontal="true"
-        />
+<!--    <LinearLayout-->
+<!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:id="@+id/adviewabout"-->
+<!--        android:orientation="vertical"-->
+<!--        android:background="@color/white"-->
+<!--        android:layout_marginTop="@dimen/margin_10"-->
+<!--        android:layout_gravity="center_horizontal"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        />-->
 
 </LinearLayout>
