--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="margenta">#880061</color>
     <color name="google">#dd4b39</color>
     <color name="dark_green">#004D40</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
