--- a/app/src/main/res/layout/activity_my_shop.xml
+++ b/app/src/main/res/layout/activity_my_shop.xml
@@ -1,188 +1,205 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:id="@+id/drawer_layout"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="#DCDCDC"
-android:fitsSystemWindows="true">
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#DCDCDC"
+    android:fitsSystemWindows="true">
 
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-
-tools:context=".activity.MyShop">
-<!--<android.support.v4.widget.NestedScrollView-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="match_parent"-->
-<!--android:fillViewport="true"-->
-<!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
-
-<android.support.design.widget.AppBarLayout
-android:id="@+id/appBar"
-android:layout_width="match_parent"
-android:layout_height="wrap_content">
-
-<android.support.v7.widget.Toolbar
-android:id="@+id/toolbar"
-android:layout_width="match_parent"
-android:layout_height="?attr/actionBarSize"
-app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
-</android.support.design.widget.AppBarLayout>
-
-<RelativeLayout
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:layout_margin="@dimen/margin_10"
-
-app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
-<!--¬<include-->
-<!--android:id="@+id/adView"-->
-<!--layout="@layout/add_layout"-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="wrap_content"-->
-<!--android:layout_alignParentBottom="true" />-->
-
-<!--<android.support.v4.widget.NestedScrollView-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="fill_parent"-->
-<!--android:overScrollMode="never"-->
-<!--&gt;-->
-
-
-
-
-<RelativeLayout
-android:id="@+id/footer"
-android:layout_width="match_parent"
-android:layout_height="60dp"
-android:layout_alignParentBottom="true"
-android:layout_gravity="center"
-android:background="@color/white"
-android:gravity="center">
-
-<include
-layout="@layout/add_layout"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_alignParentBottom="true" />
-</RelativeLayout>
-<RelativeLayout
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical"
-
-android:fillViewport="true"
-android:layout_above="@+id/footer"
-android:paddingLeft="@dimen/padding_10"
-    android:paddingRight="@dimen/padding_10">
-
-
-    <EditText
-        android:id="@+id/editTextSearch"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Find Any Used Vehicle"
-        android:padding="@dimen/padding_10"
-        android:imeOptions="actionSearch"
-        android:maxLines="1"
-        android:inputType="text"
-        android:drawableLeft="@drawable/magnify"
+        android:layout_height="match_parent"
+        tools:context=".activity.MyShop">
+        <!--<android.support.v4.widget.NestedScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:fillViewport="true"-->
+        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
 
-        android:background="#ffffff"
-        />
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:id="@+id/layout1"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/editTextSearch"
-        android:gravity="center"
-        android:weightSum="1"
-        android:orientation="horizontal">
-    <Button
-        android:id="@+id/btn_car"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-
-
-        android:text="Used Cars"
-        android:layout_marginTop="@dimen/padding_5"
-        android:drawableLeft="@drawable/whitecar"
-        android:textColor="@android:color/white"
-        android:textSize="12sp"
-        android:drawablePadding="0dp"
-
-
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-
-
-        android:background="@color/colorPrimary"
-        android:layout_weight="0.5"
-        android:textStyle="normal" />
-    <Button
-        android:id="@+id/btn_bike"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        </com.google.android.material.appbar.AppBarLayout>
 
 
 
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/margin_10"
+            android:layout_marginLeft="@dimen/margin_10"
+            android:layout_marginRight="@dimen/margin_10"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+            <!--¬<include-->
+            <!--android:id="@+id/adView"-->
+            <!--layout="@layout/add_layout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentBottom="true" />-->
 
-
-        android:text="Used Bikes"
-        android:drawableLeft="@drawable/motorbike"
-
-
-        android:background="@color/white"
-        android:layout_weight="0.5"
-        android:layout_marginTop="@dimen/padding_5"
-        android:textColor="@android:color/black"
-        android:textSize="12sp"
-        android:textStyle="normal" />
-    </LinearLayout>>
-
-
-<android.support.v7.widget.RecyclerView
-android:id="@+id/list"
-    android:layout_below="@id/layout1"
-
-
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-
-/>
+            <!--<android.support.v4.widget.NestedScrollView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="fill_parent"-->
+            <!--android:overScrollMode="never"-->
+            <!--&gt;-->
 
 
 
-<!--</android.support.v4.widget.NestedScrollView>>-->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@+id/footer"
+                android:fillViewport="true"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/padding_10"
+                android:paddingRight="@dimen/padding_10">
 
 
-<ProgressBar
-android:id="@+id/progressBar"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_centerInParent="true"
-android:visibility="gone" />
+                <EditText
+                    android:id="@+id/editTextSearch"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#ffffff"
+                    android:drawableLeft="@drawable/magnify"
+                    android:hint="Find Any Used Vehicle"
+                    android:imeOptions="actionSearch"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:padding="@dimen/padding_10" />
 
-</RelativeLayout>>
-</RelativeLayout>>
+                <androidx.cardview.widget.CardView
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:id="@+id/slider_card"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="5dp"
+                    android:layout_marginBottom="@dimen/margin_5"
+                    android:layout_below="@id/editTextSearch"
+                    android:elevation="10dp">
 
-<!--</android.support.v4.widget.NestedScrollView>-->
-</android.support.design.widget.CoordinatorLayout>
+                    <com.denzcoskun.imageslider.ImageSlider
+                        android:layout_gravity="center"
+                        android:id="@+id/image_slider"
+                        app:iss_title_background="@color/transparent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="125dp"
+                        android:maxHeight="180dp"
+                        app:iss_auto_cycle="true"
+                        app:iss_period="3000"
+                        app:iss_delay="0"/>
 
-<android.support.design.widget.NavigationView
-android:id="@+id/navigation"
-android:layout_width="wrap_content"
-android:layout_height="match_parent"
-android:fitsSystemWindows="true"
-app:headerLayout="@layout/header"
-android:layout_gravity="start"
-app:menu="@menu/navigation_items" />
-</android.support.v4.widget.DrawerLayout>
+                </androidx.cardview.widget.CardView>
+
+
+
+                <LinearLayout
+                    android:id="@+id/layout1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/slider_card"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
+
+                    <Button
+                        android:id="@+id/btn_car"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+
+
+                        android:layout_marginTop="@dimen/padding_5"
+                        android:layout_weight="0.5"
+                        android:background="@color/colorPrimary"
+                        android:drawableLeft="@drawable/whitecar"
+                        android:drawablePadding="0dp"
+                        android:paddingLeft="30dp"
+
+
+                        android:paddingRight="30dp"
+                        android:text="Used Cars"
+
+
+                        android:textColor="@android:color/white"
+                        android:textSize="12sp"
+                        android:textStyle="normal" />
+
+                    <Button
+                        android:id="@+id/btn_bike"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+
+
+                        android:layout_marginTop="@dimen/padding_5"
+                        android:layout_weight="0.5"
+
+
+                        android:background="@color/white"
+                        android:drawableLeft="@drawable/motorbike"
+
+
+                        android:paddingLeft="30dp"
+                        android:paddingRight="30dp"
+                        android:text="Used Bikes"
+                        android:textColor="@android:color/black"
+                        android:textSize="12sp"
+                        android:textStyle="normal" />
+                </LinearLayout>
+                >
+
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/list"
+                    android:layout_width="match_parent"
+
+
+                    android:layout_height="match_parent"
+                    android:layout_below="@id/layout1"
+
+                    />
+
+
+                <!--</android.support.v4.widget.NestedScrollView>>-->
+
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:visibility="gone" />
+
+            </RelativeLayout>
+
+            <include
+                layout="@layout/add_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true" />
+
+        </RelativeLayout>
+
+        <!--</android.support.v4.widget.NestedScrollView>-->
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/header"
+        app:menu="@menu/navigation_items" />
+</androidx.drawerlayout.widget.DrawerLayout>
 
