--- a/app/src/main/res/layout/add_layout.xml
+++ b/app/src/main/res/layout/add_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:id="@+id/adView"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="@color/transparent"
     android:layout_gravity="center_horizontal"
     android:layout_centerHorizontal="true"
     />
