--- a/app/src/main/res/layout/shop_detail_view.xml
+++ b/app/src/main/res/layout/shop_detail_view.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:layout_height="wrap_content">
 
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
@@ -350,7 +350,7 @@
         <!--</LinearLayout>-->
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
     <!--<LinearLayout-->
         <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
         <!--android:layout_height="wrap_content"-->
